syntax = "proto3";
package cdm;
option java_package = "com.kitware.physiology.cdm";

message eBrainInjury
{
  /** @brief Types of Brain Injury that provided different nervous responses.*/
  enum Type
  {
    Diffuse                                                                 = 0;
    LeftFocal                                                               = 1;
    RightFocal                                                              = 2;
  }
}


message eHemorrhage
{
  /** @brief Types of Brain Injury that provided different nervous responses.*/
  enum Type
  {
    Internal                                                                = 0;
    External                                                                = 1;
  }
}

message eIntubation
{
  enum Type
  {
   Off                                                                     = 0;
   Esophageal                                                              = 1;
   LeftMainstem                                                            = 2;
   RightMainstem                                                           = 3;
   Tracheal                                                                = 4;
  }
}

message eSubstanceAdministration
{
  enum Route
  {
    Intravenous                                                             = 0;/** @brief Injection into a vein */          
    Epidural                                                                = 1;/** @brief Injection into a epidural space */
    Intraosseous                                                            = 2;/** @brief Injection into the bone marrow */
    Intraarterial                                                           = 3;/** @brief Injection into an artery */
    Intracardiac                                                            = 4;/** @brief Injection into the heart */
    Intracerebral                                                           = 5;/** @brief Injection into the brain */
    Intracerebroventricular                                                 = 6;/** @brief Injection into the cerebral ventricles */
    Intradermal                                                             = 7;/** @brief Injection into the skin */
    Intramuscular                                                           = 8;/** @brief Injection into the muscle */      
    Subcutaneous                                                            = 9;/** @brief Injection under the skin */      
  }
}
